// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 1`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.004019,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.995981,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 2`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.023374,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.976626,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 3`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.042725,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.957275,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 4`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.06208,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.93792,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 5`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.081433,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.918567,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 6`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.100784,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.899216,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 7`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.120137,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.879863,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 8`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.139494,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.860506,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 9`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.15887,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.84113,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 10`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.1782,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.8218,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 11`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.197546,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.802454,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 12`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.216933,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.783067,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 13`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.236292,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.763708,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 14`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.25563,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.74437,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 15`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.274977,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.725023,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 16`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.294298,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.705702,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 17`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.313653,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.686347,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Occurrences SLOs returns the summary 18`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.333025,
    "initial": 0.05,
    "isEstimated": true,
    "remaining": 0.666975,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 1`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.001344,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.998656,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 2`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.002688,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.997312,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 3`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.004032,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.995968,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 4`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.005376,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.994624,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 5`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.00672,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.99328,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 6`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.008065,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.991935,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 7`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.009409,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.990591,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 8`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.010753,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.989247,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 9`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.012097,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.987903,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 10`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.013441,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.986559,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 11`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.014785,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.985215,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 12`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.016129,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.983871,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 13`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.017473,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.982527,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 14`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.018817,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.981183,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 15`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.020161,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.979839,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 16`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.021505,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.978495,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 17`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.022849,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.977151,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Calendar Aligned and Timeslices SLOs returns the summary 18`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.024194,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.975806,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 1`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 2`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 3`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 4`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 5`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 6`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 7`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 8`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 9`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 10`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 11`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 12`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 13`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 14`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 15`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 16`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 17`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 18`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 19`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 20`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 21`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 22`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 23`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 24`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 25`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 26`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 27`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 28`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 29`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Occurrences SLOs returns the summary 30`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 1`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 2`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 3`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 4`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 5`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 6`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 7`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 8`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 9`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 10`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 11`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 12`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 13`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 14`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 15`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 16`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 17`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 18`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 19`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 20`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 21`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 22`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 23`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 24`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 25`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 26`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 27`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 28`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 29`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;

exports[`FetchHistoricalSummary Rolling and Timeslices SLOs returns the summary 30`] = `
Object {
  "date": Any<Date>,
  "errorBudget": Object {
    "consumed": 0.6,
    "initial": 0.05,
    "isEstimated": false,
    "remaining": 0.4,
  },
  "sliValue": 0.97,
  "status": "HEALTHY",
}
`;
